// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image that can't be transformed do nothing on SVG image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img src=\\"test.svg\\" />
  </body>
</html>
"
`;

exports[`image that can't be transformed do nothing on image with already a srcset 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img src=\\"test.png\\" srcset=\\"test.png 320w\\" />
  </body>
</html>
"
`;

exports[`image that can't be transformed do nothing on image without a src 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img alt=\\"not really an image\\" />
  </body>
</html>
"
`;

exports[`image with options simple image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      srcset=\\"test-120.png 120w, test-220.png 220w, test-320.png 320w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image with options width attribute inferior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-420.png\\"
      width=\\"420\\"
      srcset=\\"
        test-320.png 320w,
        test-345.png 345w,
        test-370.png 370w,
        test-395.png 395w,
        test-420.png 420w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image with options width attribute superior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-480.png\\"
      width=\\"789\\"
      srcset=\\"
        test-320.png 320w,
        test-438.png 438w,
        test-555.png 555w,
        test-672.png 672w,
        test-789.png 789w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options simple image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      srcset=\\"
        test-320.png   320w,
        test-880.png   880w,
        test-1440.png 1440w,
        test-2000.png 2000w,
        test-2560.png 2560w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute inferior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-543.png\\"
      width=\\"543\\"
      srcset=\\"
        test-320.png 320w,
        test-376.png 376w,
        test-432.png 432w,
        test-488.png 488w,
        test-543.png 543w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute superior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      width=\\"789\\"
      srcset=\\"
        test-320.png 320w,
        test-438.png 438w,
        test-555.png 555w,
        test-672.png 672w,
        test-789.png 789w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`no image keeps intact HTML without image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <p>Hello</p>
  </body>
</html>
"
`;
